[package]
name = "toml_const_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8"
clap = {version = "4.4", features = ["derive"]}
pretty_env_logger = "0.5"
log = "0.4"
toml_const = "0.1"
