[package]
name = "toml_const_cli"
version = "0.1.1"
edition = "2021"
rust-version = "1.56"
description = "Command line utility for toml_const"
repository = "https://github.com/cruzerngz/toml_const_cli"
license = "MIT"
keywords = ["toml", "config"]
categories = ["config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8"
clap = {version = "4.4", features = ["derive"]}
pretty_env_logger = "0.5"
log = "0.4"
toml_const = "0.1"
